# tafrigh

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  Dockerfile  LICENSE  README.en.md  README.md  colab_notebook.ipynb  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  formatter.yml  release.yml
src/: __init__.py  audio_splitter.py  cli.py  config.py  downloader.py  writer.py
src/recognizers/: whisper_recognizer.py  wit_calling_throttle.py  wit_recognizer.py
src/types/: segment_type.py  transcript_type.py
src/types/whisper/: type_hints.py
src/utils/: cli_utils.py  time_utils.py
src/utils/whisper/: whisper_utils.py
src/utils/wit/: file_utils.py
tafrigh/: __init__.py  audio_splitter.py  cli.py  config.py  downloader.py  recognizer.py  transcript_writer.py  writer.py  youtube_downloader.py
tafrigh/recognizers/: whisper_recognizer.py  wit_calling_throttle.py  wit_recognizer.py
tafrigh/types/: segment_type.py  transcript_type.py
tafrigh/types/whisper/: type_hints.py
tafrigh/utils/: cli_utils.py  decorators.py  file_utils.py  time_utils.py  transcript_utils.py  type_hints.py  whisper_utils.py  yt_dlp_utils.py
tafrigh/utils/whisper/: whisper_utils.py
tafrigh/utils/wit/: file_utils.py
