[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tafrigh"
version = "1.1.3"
description = "تفريغ النصوص وإنشاء ملفات SRT و VTT باستخدام نماذج Whisper وتقنية wit.ai."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{ name = "الكتب المٌيسّرة", email = "easybooksdev@gmail.com" }]
keywords = ["tafrigh", "speech-to-text", "wit.ai", "whisper"]
dependencies = ["tqdm==4.65.1", "yt-dlp==2023.7.6"]

[project.optional-dependencies]
wit = [
    "auditok==0.2.0",
    "numpy==1.23.5",
    "pydub==0.25.1",
    "requests==2.31.0",
    "scipy==1.11.1",
]
whisper = [
    "faster-whisper==0.10.0",
    "openai-whisper==20231117",
    "stable-ts==2.13.4",
]

[project.urls]
homepage = "https://github.com/ieasybooks/tafrigh"
repository = "https://github.com/ieasybooks/tafrigh"

[project.scripts]
tafrigh = "tafrigh.cli:main"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = "tafrigh"
line_length = 120
lines_between_types = 1
lines_after_imports = 2
case_sensitive = true
include_trailing_comma = true
