[tool.poetry]
name = "tafrigh"
version = "1.7.4"
description = "تفريغ النصوص وإنشاء ملفات SRT و VTT باستخدام نماذج Whisper وتقنية wit.ai."
authors = ["EasyBooks <easybooksdev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tafrigh"}]
keywords = ["tafrigh", "speech-to-text", "wit.ai", "whisper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
homepage = "https://tafrigh.ieasybooks.com"
repository = "https://github.com/ieasybooks/tafrigh"

[tool.poetry.dependencies]
python = ">=3.10"
tqdm = ">=4.67.1"
yt-dlp = {version = "^2024.12.6", extras = ["default"]}
auditok = ">=0.3.0"
pydub = ">=0.25.1"
requests = ">=2.32.0"
faster-whisper = ">=1.1.0"
stable-ts = ">=2.17.5"
openai-whisper = ">=20240930"
numba = ">=0.60.0" # This is required to be able to install llvmlite.

[tool.poetry.extras]
wit = ["auditok", "pydub", "requests"]
whisper = ["faster-whisper", "openai-whisper", "stable-ts"]
all = ["wit", "whisper"]

[tool.poetry.scripts]
tafrigh = "tafrigh.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.autopep8]
max-line-length = 120
indent-size = 2
ignore = ["E121"]

[tool.isort]
line_length = 120
src_paths = ["tafrigh"]
lines_between_types = 1
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
